beberapa modifikasi
